--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "sequelize": "^6.9.0"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.16.0",
+    "eslint": "^8.1.0"
   }
 }
