--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-server": "nodemon main.js"
+    "start-server": "nodemon main.js",
+    "seed": "node seed.js"
   },
   "repository": {
     "type": "git",
