--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node main.js",
     "start-server": "nodemon main.js",
     "seed": "node seed.js"
   },
