--- a/package.json
+++ b/package.json
@@ -43,9 +43,14 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.3",
+    "chai": "^4.3.4",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^8.1.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
     "webpack-cli": "^4.9.1"
   }
