--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "16x"
+    "node": "16.x"
   },
   "scripts": {
     "start": "node main.js",
