--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^0.2.8",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-transition-group": "^4.4.2",
+    "redux": "^4.1.2",
     "sequelize": "^6.9.0",
     "webpack": "^5.63.0",
     "webpack-dev-server": "^4.4.0"
@@ -62,6 +64,8 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "webpack-cli": "^4.9.1"
   }
 }
