--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-moralis": "^0.2.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
