--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fluent-ffmpeg": "^1.7.0",
+    "furioos-sdk": "^1.2.5",
     "moralis": "^0.0.128",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
