--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@ffmpeg/ffmpeg": "^0.9.8",
     "@react-three/drei": "^9.13.0",
     "@react-three/fiber": "^8.0.22",
+    "@splinetool/loader": "^0.9.72",
+    "@splinetool/r3f-spline": "^1.0.1",
     "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
@@ -50,7 +52,7 @@
     "react-draggable": "^4.4.4",
     "react-moralis": "^0.2.8",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "sequelize": "^6.9.0",
