--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node main.js",
     "build": "webpack --mode production",
+    "start-server": "nodemon main.js",
     "start-dev": "webpack serve --mode development"
   },
   "repository": {
@@ -36,6 +37,7 @@
     "express": "^4.17.1",
     "fluent-ffmpeg": "^1.7.0",
     "furioos-sdk": "^1.2.5",
+    "history": "^5.3.0",
     "moralis": "^0.0.128",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
