--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.14.0",
     "fluent-ffmpeg": "^1.7.0",
     "furioos-sdk": "^1.2.5",
     "history": "^5.3.0",
