--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.2.1",
     "fluent-ffmpeg": "^1.7.0",
     "furioos-sdk": "^1.2.5",
     "history": "^5.3.0",
