updates npm dev script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode production",
     "build-watch": "webpack --watch --mode development",
     "start-server": "nodemon main.js -e html,js,css --ignore public",
-    "start-dev": "npm run build-watch & npm run start-server"
+    "dev": "npm run build-watch & npm run start-server"
   },
   "repository": {
     "type": "git",
