adds custom firebase auth login to server

--- a/package.json
+++ b/package.json
@@ -23,31 +23,22 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
-    "@ffmpeg/core": "^0.9.0",
     "@ffmpeg/ffmpeg": "^0.9.8",
+    "@metamask/eth-sig-util": "^5.0.2",
     "@react-three/drei": "^9.13.0",
     "@react-three/fiber": "^8.0.22",
-    "@splinetool/loader": "^0.9.72",
-    "@splinetool/r3f-spline": "^1.0.1",
     "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
-    "chalk": "^4.1.2",
-    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.2.1",
-    "fluent-ffmpeg": "^1.7.0",
-    "furioos-sdk": "^1.2.5",
     "history": "^5.3.0",
     "moralis": "^0.0.128",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "nodemon": "^2.0.14",
-    "p-queue": "^7.1.0",
-    "pg": "^8.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-draggable": "^4.4.4",
@@ -56,22 +47,16 @@
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
-    "sequelize": "^6.9.0",
     "three": "^0.141.0",
+    "uuid": "^9.0.0",
+    "web3": "^1.8.1",
     "webpack": "^5.63.0",
     "webpack-dev-server": "^4.4.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.3.3",
-    "chai": "^4.3.4",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^8.1.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.1",
-    "hardhat": "^2.6.8",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "webpack-cli": "^4.9.1"
